--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ background-size: cover;
   <source src="Krishna.mp3" type="audio/mp3">
 
 <script>
-   var audio = new Audio('ganap.mp3');
+   var audio = new Audio('KRISHNA.mp3');
    audio.play()
 // Set the date we're counting down to
 var countDownDate = new Date("dec 21, 2022 24:00:00").getTime();
